--- a/assets/vuetify/settings.scss
+++ b/assets/vuetify/settings.scss
@@ -1,19 +1,34 @@
 
 @forward 'vuetify/settings' with (
 
-  // Tabs
-  $tab-slider-size: 2px,
+ // 👉 Transitions
+ $main-transition: 0s,
+ $navigation-drawer-transition-duration: 0s,
+ $app-bar-transition: 0s,
+ $toolbar-transition: 0s,
 
-  // Buttons
-  $button-disabled-opacity: 0.5,
-  $button-disabled-overlay: 0.1,
-  $button-text-transform: false,
+ // Tabs
+ $tab-slider-size: 2px,
 
-  // Fields
-  $field-input-opacity: 0.9,
-  $field-outline-opacity: 0.9,
-  $field-transition-timing: 0s,
-  $field-subtle-transition-timing: 0s,
-  $field-focused-border-width: 2.5px,
-  $field-control-solo-elevation: 0,
-);
+ // Buttons
+ $button-disabled-opacity: 0.5,
+ $button-disabled-overlay: 0.1,
+ $button-text-transform: false,
+ $button-text-letter-spacing: 0px,
+
+ // Fields
+ $field-input-opacity: 0.9,
+ $field-outline-opacity: 0.9,
+ $field-transition-timing: 0s,
+ $field-subtle-transition-timing: 0s,
+ $field-focused-border-width: 2.5px,
+ $field-control-solo-elevation: 0,
+
+ //Skeleton
+ $skeleton-loader-avatar-margin: 8px 12px 8px 0px,
+
+  //Bredcrumbs
+  $breadcrumbs-divider-padding : 0 4px
+
+ );
+
