--- a/assets/css/globals.css
+++ b/assets/css/globals.css
@@ -13,7 +13,7 @@ a:not(.v-btn):not(.v-list-item):not(.ignore-a-style) {
   } */
   
   .bg-dark {
-    background: #191a23;
+    background: #0a0a0a;
   }
   
   .bg-light {
